# flx.py

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
flx/: __init__.py  flx.py  util.py
scripts/: setup.bat
test/: test_flx.py
