[project]
description = "Rewrite emacs-flx in Python"
version = "0.0.1"
authors = [
  {name = "Jen-Chieh Shen", email = "jcs090218@gmail.com"}
]
maintainers = [
  {name = "Jen-Chieh Shen", email = "jcs090218@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"

requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/the-flx/flx.py"
Issues = "https://github.com/the-flx/flx.py/issues"
